# Homenetctl

./: CMakeLists.txt  LICENSE  README.md  Session.vim  homenetctl  homenetctl-completion.bash
src/: CMakeLists.txt  homenetctl
src/include/: Client.h  RSAKeyPair.h  Server.h  Socket.h  certificat.hpp  certificate.h  certificateHandler.h  core.hpp  equipment.h  test.h
src/sources/: Client.cpp  RSAKeyPair.cpp  Server.cpp  Socket.cpp  certificate.cpp  certificateHandler.cpp  core.cpp  equipment.cpp  equipmentClient.cpp  equipmentDisplay.cpp  equipmentServer.cpp  main.cpp  test.cpp
